# capdiff

./: .gitignore  CMakeLists.txt  makeall.sh
2D1C/: 2D1C.cpp  Plasma2D.cpp  Plasma2D.h
2D1C/kampf_code/: calculate_energy.c  calculate_next_step.c  capillary_tests.c  initialize_capillaries.c  initialize_structure.c  main.c  pattern_test_functions.c  ran2_NRIC.c  simstruct.h
FieldTool/: FieldTool.cpp
Main/: Exec.cpp
Simulator/: SimulationEvaluator.cpp  SimulationEvaluator.h  Simulator.cpp  Simulator.h  SpinEchoSequence.h
Simulator/util/: Capillary2D.cpp  Capillary2D.h  CapillaryConfiguration.cpp  CapillaryConfiguration.h  CollisionObject.h  Compartement.cpp  Compartement.h  Describable.h  Field2D.h  IOManager.cpp  IOManager.h  LiveField2D.cpp  LiveField2D.h  MPICommunicator.cpp  MPICommunicator.h  PrecalculatedField2D.cpp  PrecalculatedField2D.h
Simulator/util/boundaries/: CircleBoundary.h  CyclicRectangularBoundary.h  MixedBoundary.h  OuterBoundary.h  RectangularBoundary.h  ReflectiveRectangularBoundary.h
Simulator3D/: CollisionObject3D.h  Compartement3D.cpp  Compartement3D.h  Configuration3D.cpp  Configuration3D.h  DiscreteField3D.cpp  DiscreteField3D.h  IOManager3D.cpp  IOManager3D.h  LiveField3D.h  OuterBoundary3D.h  SimulationEvaluator3D.cpp  SimulationEvaluator3D.h  Simulator3D.cpp  Simulator3D.h  Sphere3D.h
Tests/: Exec.cpp  sample_trajectories.csv  snipplets.h  stats.csv  test.txt
util/: Matrix2D.cpp  Matrix2D.h  Matrix3D.cpp  Matrix3D.h  Matrix4D.cpp  Matrix4D.h  MyException.h  PerfClock.cpp  PerfClock.h  Point.h  Progress.cpp  Progress.h  RandomNumberGenerator.cpp  RandomNumberGenerator.h  Rectangle.h  ThreadPool.cpp  ThreadPool.h  util.h  vt100.h
voronoi/: Progress.cpp  Progress.h
voronoi/src/: voronoi.cpp
